MDEV-5459 Illegal mix of collations for datetime